Add admin SQLite viewer

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -96,7 +96,7 @@
 
 <body>
     <h1>邮箱账户管理</h1>
-    <p>欢迎, {{ username }}</p>
+    <p>欢迎, {{ username }} | <a href="/admin/db">查看 SQLite 数据库</a></p>
 
     <button onclick="openModal()">添加新账户</button>
 
