--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -136,8 +136,8 @@
                     <input type="text" id="accessToken" placeholder="自动生成">
                 </div>
                 <div class="form-group">
-                    <label>默认发件人过滤</label>
-                    <input type="text" id="senderFilter">
+                    <label>默认发件人过滤 <small>(可填写多个，使用换行或逗号分隔)</small></label>
+                    <textarea id="senderFilter" rows="3" placeholder="一行一个发件人地址"></textarea>
                 </div>
                 <button type="submit">保存</button>
             </form>
